# maude2lean

./: .gitignore  Algebra.lean  Cargo.toml  Cauchy.lean  Complete.lean  Decimal.lean  Derivation.lean  Eq.lean  Frac.lean  FracArith.lean  Int.lean  IntOrder.lean  MetaVarDemo.lean  Nat.lean  NatProof.lean  Order.lean  Proof.lean  QuadraticChain.lean  QuadraticDerivation.lean  README.md  Real.lean  TODO.md  TestAlgebra.lean  TestSolve.lean  TestSolve2.lean  TestSolve3.lean  TestSolveTactic.lean  TestTheoremTactic.lean  Tests.lean  True.lean  WellFounded.lean  batch_check.sh  bench_decimal.lean  check_all.sh  design.md  lean_kernel.maude  ott.md  perm_decimal.lean  perm_decimal_test.lean  test.lean  (+6 more)
examples/: nat.ott
gallery/: index.html
lib/: Algebra.cic  Algebra.lean  Cauchy.cic  Cauchy.lean  Complete.cic  Complete.lean  Decimal.cic  Decimal.lean  Derivation.lean  Exists.cic  Exists.lean  Frac.cic  Frac.lean  FracArith.cic  FracArith.lean  Geometry.cic  IntOrder.cic  IntOrder.lean  MetaVarDemo.lean  Nat.cic  NatMatchFull.cic  NatMatchProofDeep.cic  NatProof.cic  Order.lean  Proof.cic  QuadraticChain.lean  QuadraticFormula.lean  Real.cic  Real.lean  Tests.lean  True.lean  WellFounded.lean  bench_decimal.lean  decimal_data.lean  decimal_quicksort.lean  logic.cic  solve.lean  test.lean  test_ind2.cic  test_induction.cic  (+10 more)
src/: environment.rs  expr.rs  format.rs  lib.rs  local_ctx.rs  main.rs  penrose.rs  repl.rs  repl_parser.rs  server.rs  tactic.rs  test_auto_rec.rs  tui.rs  type_checker.rs
web/: cic-to-penrose.mjs  debug-butterfly.mjs  gallery-config.mjs  serve.mjs  (+2 more)
(+96 files in other folders)
